--- a/Exercises/Serialisation/TarjetaCreditoSerializacion/nbproject/project.properties
+++ b/Exercises/Serialisation/TarjetaCreditoSerializacion/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=TarjetaCreditoSerializacion
-main.class=tarjetacreditoserializacion.TarjetaCreditoSerializacion
+main.class=interfaz.InterfazJF
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
