--- a/Projects/2-GestionTarjetas/TarjetaCreditoSwing/nbproject/project.properties
+++ b/Projects/2-GestionTarjetas/TarjetaCreditoSwing/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/TarjetaCreditoSerializacion.jar
+dist.jar=${dist.dir}/TarjetaCreditoSwing.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/TarjetaCreditoSerializacion
+dist.jlink.output=${dist.jlink.dir}/TarjetaCreditoSwing
 excludes=
 includes=**
 jar.compress=false
@@ -70,7 +70,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=TarjetaCreditoSerializacion
+jlink.launcher.name=TarjetaCreditoSwing
 main.class=interfaz.InterfazJF
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
